// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`China getting multiCooperation 1`] = `
"Array [
  Object {
    \\"color\\": \\"#0095CB\\",
    \\"region\\": \\"Africa\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 65.9,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"region\\": \\"Asia\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 19,
  },
  Object {
    \\"color\\": \\"#93328E\\",
    \\"region\\": \\"Europe\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 7,
  },
  Object {
    \\"color\\": \\"#21BA45\\",
    \\"region\\": \\"Americas\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 6,
  },
  Object {
    \\"color\\": \\"#54C8FF\\",
    \\"region\\": \\"Oceania\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 2.1,
  },
]"
`;

exports[`China getting tch top recipients 1`] = `
"Array [
  Object {
    \\"color\\": \\"#0071b1\\",
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 5695.6,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#bc2629\\",
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 1441.9,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#21BA45\\",
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 1355.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#0095CB\\",
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 919.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#DC73FF\\",
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 306.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": \\"0\\",
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#54C8FF\\",
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 445.7,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 1777.7,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#0071b1\\",
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 3319.9,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#bc2629\\",
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 568.5,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#21BA45\\",
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 187.1,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#0095CB\\",
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 560.3,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#DC73FF\\",
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 696,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 900.3,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#54C8FF\\",
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 276.6,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 3046,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#0071b1\\",
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 4008.4,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#bc2629\\",
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 1404,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#21BA45\\",
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 439,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#0095CB\\",
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": \\"0\\",
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#DC73FF\\",
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 367,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#EA7600\\",
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 31.7,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#54C8FF\\",
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 28.2,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 579.8,
    \\"year\\": 2014,
  },
]"
`;

exports[`China getting tch top recipients 2`] = `
"Array [
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 5695.6,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 1441.9,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 1355.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 919.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 306.8,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": \\"0\\",
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 445.7,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 1777.7,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 3319.9,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 568.5,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 187.1,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 560.3,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 696,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 900.3,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 276.6,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 3046,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Transport and Storage\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 4008.4,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Energy Generation and Supply\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 1404,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Industry, Mining, Construction\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 439,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Water Supply and Sanitation\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": \\"0\\",
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Communications\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 367,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Trade and Tourism\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 31.7,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"Government and Civil Society\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 28.2,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": undefined,
    \\"sector\\": \\"All others\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 579.8,
    \\"year\\": 2014,
  },
]"
`;

exports[`China getting tch top recipients 3`] = `
"Array [
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 0.2,
    \\"year\\": 2006,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 0.2,
    \\"year\\": 2007,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 0.3,
    \\"year\\": 2008,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 0.3,
    \\"year\\": 2009,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 0.4,
    \\"year\\": 2010,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 0.3,
    \\"year\\": 2011,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 0.4,
    \\"year\\": 2012,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 0.7,
    \\"year\\": 2013,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 0.4,
    \\"year\\": 2014,
  },
  Object {
    \\"color\\": \\"#e8443a\\",
    \\"id\\": \\"Multilateral organisations\\",
    \\"uid\\": \\"unique_id_stub\\",
    \\"value\\": 0.6,
    \\"year\\": 2015,
  },
]"
`;
